--- a/frappe/public/js/frappe/ui/toolbar/navbar.html
+++ b/frappe/public/js/frappe/ui/toolbar/navbar.html
@@ -38,7 +38,7 @@
 					    {%= __("Reload") %}</a></li>
 					<li><a href="/index" target="_blank" rel="noopener noreferrer">
 						{%= __("View Website") %}</a></li>
-					<li><a href="#" id="dark_mode_route" onclick="frappe.dark_mode.toggle_mode();">
+					<li><a id="dark_mode_route" onclick="frappe.dark_mode.toggle_mode();">
 						{%= __("Dark Mode") %}<input type="checkbox" id="dark_mode" style="float: right;"></a></li>
 					<li><a href="#background_jobs">
 						{%= __("Background Jobs") %}</a></li>
