Make liked_by popover scrollable

--- a/frappe/public/js/frappe/ui/liked_by.html
+++ b/frappe/public/js/frappe/ui/liked_by.html
@@ -1,4 +1,4 @@
-<ul class="list-unstyled liked-by-popover">
+<ul class="list-unstyled">
 	{% for (var i in liked_by) { var liked_by_user = liked_by[i]; %}
 		<li>
 			{%= frappe.avatar(liked_by_user) %}
