Change login head text

--- a/frappe/www/login.html
+++ b/frappe/www/login.html
@@ -13,7 +13,7 @@
 	<div class="login-content page-card" style="margin-top: 30px;">
 		<form class="form-signin form-login" role="form">
 			<div class="page-card-head">
-				<span class="indicator blue" data-text="{{ _("Login to start your session") }}"></span>
+				<span class="indicator blue" data-text="{{ _("Login") }}"></span>
 			</div>
 
 			<input type="text" id="login_email"
