--- a/frappe/www/recorder.html
+++ b/frappe/www/recorder.html
@@ -6,5 +6,6 @@
 
 <div id="recorder"></div>
 <script type="text/javascript" src="/assets/js/frappe-recorder.min.js"></script>
+<style> {{ highlight }} </style>
 
 {% endblock %}
