--- a/frappe/public/js/frappe/ui/filters/edit_filter.html
+++ b/frappe/public/js/frappe/ui/filters/edit_filter.html
@@ -18,6 +18,8 @@
 				<option value="not descendants of">{%= __("Not Descendants Of") %}</option>
 				<option value="ancestors of">{%= __("Ancestors Of") %}</option>
 				<option value="not ancestors of">{%= __("Not Ancestors Of") %}</option>
+				<option value="Previous">{%=__("Previous")%}</option>
+				<option value="Next">{%=__("Next")%}</option>
 			</select>
 		</div>
 		<div class="col-sm-6 col-xs-12">
