fix: Bootstrap 4 class fixes

--- a/frappe/www/third_party_apps.html
+++ b/frappe/www/third_party_apps.html
@@ -48,7 +48,7 @@
 				</small>
 			</div>
 			<div class="col-xs-2 text-right small text-muted">
-				<a class="btn btn-xs btn-link" href="/third_party_apps?app={{ app.name }}">{{ _("Revoke") }}</a>
+				<a class="btn btn-sm btn-link" href="/third_party_apps?app={{ app.name }}">{{ _("Revoke") }}</a>
 			</div>
 		</div>
 	</div>
