--- a/frappe/public/js/frappe/list/list_sidebar.html
+++ b/frappe/public/js/frappe/list/list_sidebar.html
@@ -50,7 +50,7 @@
 			{%= __("Assigned To") %} <span class="caret"></span>
 		</a>
 		<ul class="dropdown-menu assigned-dropdown" style="max-height: 300px; overflow-y: auto;">
-			<li><div class="list-loading text-center assigned-loading" style="color: #8d99a6">
+			<li><div class="list-loading text-center assigned-loading text-muted">
 				{%= (__("Loading") + "..." ) %}
 			</div>
 			</li>
