feat: Show energy point logs on form timeline

--- a/frappe/public/js/frappe/form/footer/timeline_item.html
+++ b/frappe/public/js/frappe/form/footer/timeline_item.html
@@ -183,6 +183,8 @@
 						{% } %}
 						{%= __("Liked by {0}", [data.fullname]) %}
 					</span>
+					{% } else if (data.comment_type == "Energy Points") { %}
+						{{ data.content_html }}
 					{% } else { %}
 						<b title="{{ data.comment_by }}">{%= data.fullname %}</b>
 						{%= __(data.content) %}
